# drfadvanced

./: .gitignore  README.md  manage.py  pyproject.toml
apps/cards/: admin.py  models.py  serializer.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py  0002_alter_card_bucket.py  0003_auto_20211115_0546.py  0004_alter_card_bucket.py  0005_auto_20211115_0725.py  0006_alter_card_next_review_date.py  0007_alter_card_bucket.py  0008_auto_20211115_1652.py
apps/decks/: admin.py  models.py  serializer.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py  0002_rename_lastreviewed_deck_last_reviewed_date.py  0003_alter_deck_last_reviewed_date.py  0004_alter_deck_last_reviewed_date.py  0005_auto_20211115_1644.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
apps/utils/: models.py
drfadvanced/: asgi.py  settings.py  urls.py  wsgi.py
